text: No longer hide Default Handler section from ToC

--- a/presentation/presentation.tex
+++ b/presentation/presentation.tex
@@ -199,11 +199,11 @@ text margin right=5pt
 \section{Nested handlers}
 \input{nested.tex}
 
+\section{Bonus: Default handler}
+\input{default.tex}
+
 \section*{Outro}
 \input{outro.tex}
-
-\section*{Bonus: Default handler}
-\input{default.tex}
 
 
 % TODO
