Remove part II teaser

--- a/presentation/outro.tex
+++ b/presentation/outro.tex
@@ -1,32 +1,11 @@
 \begin{frame}{Acknowledgements}
   \begin{itemize}
     \item KC for proof-reading the slides, his feedback and advice
-    \item Jon for fixing the slides english grammar, his feedback and encouragement
+    \item Jon for his feedback and encouragement
     \item Fred for his explanations on exception's type
     \item Etienne and Olivier for their feedbacks, advice and encouragement
     \item Jules and Nicolas for their encouragement
   \end{itemize}
-\end{frame}
-
-\begin{frame}{Part II}{Maybe?}
-  \begin{columns}[c]
-    \begin{column}{0.3\textwidth}
-      \begin{itemize}
-        \item Exceptions backtrace
-        \item Exceptions and effects
-        \item Exceptions from/across C\footnotemark[1]
-        \item Exceptions and TSan
-        \item Exceptions and bytecode
-      \end{itemize}
-    \end{column}
-    \begin{column}{0.7\textwidth}
-      \begin{figure}
-        \includegraphics[width=300px]{pictures/Smith\_why.png}
-        \caption*{- Why, Mr Anderson, why? Why do you persist?}
-      \end{figure}
-    \end{column}
-  \end{columns}
-\footnotetext[1]{\href{https://github.com/OlivierNicole/ocaml-tsan/wiki/Walk-through-of-exception-raising-in-OCaml-5-when-the-stack-is-an-interleaving-of-C-frames-and-OCaml-frames}{github.com/OlivierNicole/ocaml-tsan/wiki/Walk-through-of-exception-raising-in-OCaml-5-when-the-stack-is-an-interleaving-of-C-frames-and-OCaml-frames}}
 \end{frame}
 
 \begin{frame}{Sources}
