--- a/presentation/presentation.tex
+++ b/presentation/presentation.tex
@@ -119,7 +119,7 @@ text margin right=5pt
 
 % Info
 \title[OBTS: exceptions]{OCaml behind the scenes: exceptions}
-\subtitle{Understanding how exceptions are implemented through examples -- Part 1}
+\subtitle{Understanding how exceptions are implemented through examples}
 \author{Fabrice -- @fabbing}
 \institute{Tarides}
 \date{2022-11-18}
