--- a/presentation/presentation.tex
+++ b/presentation/presentation.tex
@@ -13,6 +13,9 @@ text margin right=5pt
 \usepackage[T1]{fontenc}
 \usepackage{syntax}
 
+\usepackage{datetime2}
+\DTMsetstyle{default}
+
 % Packages for tikz diagrams
 \usepackage{xstring}
 \usepackage{xintexpr,bnumexpr}
@@ -122,7 +125,7 @@ text margin right=5pt
 \subtitle{Understanding how exceptions are implemented through examples}
 \author{Fabrice -- @fabbing}
 \institute{Tarides}
-\date{2022-11-18}
+\date{\today}
 \titlegraphic{
 \includegraphics[width=150px]{pictures/green-screen.png}
 }
