--- a/presentation/backtrace.tex
+++ b/presentation/backtrace.tex
@@ -1,17 +1,16 @@
-\subsection{Backtrace}
+%
+% Backtraces
+%
+\subsection{One advantage of raising with debugging information}
+\frameSubsection{}{}
 
-%\begin{frame}[fragile]
-%\frametitle{-g flag} % FIXME
-%\begin{verbatim}
-%-g Record debugging information for exception backtrace
-%\end{verbatim}
-%\end{frame}
-
-\begin{frame}{Source code}
+\begin{frame}{Backtraces}{Debugging information \& source code}
   \begin{columns}[c]
     \begin{column}{0.5\textwidth}
       \begin{itemize}
-        \item Same code but this time we compile using debugging information (-g)
+        \item Raising an exception is fun and games, but how do we know where the exception originated? $\rightarrow$ With the backtrace associated with the exception!
+        \item In order to get a backtrace from the point where an exception was raised, it's necessary to compile with debugging information enabled (\funcarg{-g} flag for the compiler)
+        \item Same example as in the `Nested handlers' section
       \end{itemize}
     \end{column}
     \begin{column}{0.5\textwidth}
@@ -20,15 +19,17 @@
   \end{columns}
 \end{frame}
 
-\begin{frame}{CMM and disassembly of \funcname{definitely\_raise}}
+\begin{frame}{Backtraces}{CMM and disassembly of \funcname{definitely\_raise}}
   \begin{columns}[c]
     \begin{column}{0.5\textwidth}
+      \minipage[c][0.66\textheight][s]{\columnwidth}
       \begin{itemize}
-        \item<1-> Impact of compiling with debugging information (-g): the CMM no longer uses \funcname{raise\_notrace} to raise the exception but \funcname{raise}
-        \item<2-> Disassembly shows \funcname{raise} is actually a call to \funcname{caml\_raise\_exn}, an assembly function provided by the runtime
+        \item<1-> An effect of compiling with debugging information (\funcarg{-g}): the CMM no longer uses \funcname{raise\_notrace} to raise the exception but \funcname{raise} instead
+        \item<2-> Disassembly shows that CMM \funcname{raise} is actually a call to \funcname{caml\_raise\_exn}, a function in assembler provided by the runtime
       \end{itemize}
-      \bigskip
+      \vfill
       \mintocaml[firstline=9,lastline=13,highlightlines=12]{../src/backtrace/backtrace.ml}
+      \endminipage
     \end{column}
     \begin{column}{0.5\textwidth}
       \onslide*<1>{
@@ -41,80 +42,90 @@
   \end{columns}
 \end{frame}
 
-\begin{frame}{Raise}
+\begin{frame}{Backtraces}{Introducing \funcname{caml\_raise\_exn}}
   \begin{columns}[c]
     \begin{column}{0.5\textwidth}
+      \minipage[c][0.66\textheight][s]{\columnwidth}
       \onslide*<1>{
         \begin{itemize}
-          \item raising the exceptino is performed using \funcname{caml\_raise\_exn}
-          \item \funcname{caml\_raise\_exn} is an assembly function provided by the runtime
-          \item \funcname{caml\_raise\_exn} is architecture specific
+          \item Raising the exception is performed using \funcname{caml\_raise\_exn} which is
+            \begin{itemize}
+              \item An assembly function provided by the runtime
+              \item Architecture specific
+            \end{itemize}
+          \item Let's see what it does differently from \funcname{raise\_notrace}\dots
+          \item We are about to raise \typename{ExnC} with \funcname{caml\_raise\_exn} from \funcname{definitely\_raise}
         \end{itemize}
       }
       \onslide*<2>{
         \mintobjdump[firstline=2,highlightlines=14]{../src/backtrace/camlBacktrace\_\_definitely\_raise\_347.objdump}
       }
-      \bigskip
+      \vfill
       \mintocaml[firstline=9,lastline=13,highlightlines=12]{../src/backtrace/backtrace.ml}
+      \endminipage
     \end{column}
     \begin{column}{0.5\textwidth}
+      \centering
       \providecommand\step{1}\input{diagrams/backtrace/backtrace.tex}
     \end{column}
   \end{columns}
 \end{frame}
 
-\begin{frame}{caml\_domain\_state}
-\begin{columns}
-\begin{column}{0.5\textwidth}
-\begin{listing}
-\onslide*<1>{\mintc[lastline=32,highlightlines={7}]{src/ocaml/domain\_state.h}}
-\onslide*<2>{
-\begin{itemize}
-\item \localname{backtrace\_active} ...
-\end{itemize}
-}
-\end{listing}
-\end{column}
-\begin{column}{0.5\textwidth}
-\begin{listing}
-\onslide*<1>{\mintc[firstline=32]{src/ocaml/domain\_state.h}}
-\onslide*<2->{\mintc[highlightlines={7}]{src/ocaml/domain\_state\_abbr.h}}
-\caption{runtime/caml/domain\_state.h}
-\end{listing}
-\end{column}
-\end{columns}
-\end{frame}
-
-\newcommand\listAmdSixtyFour[1][]{
-  \listasm[firstline=702,lastline=725,#1]{../ocaml/runtime/amd64.S}{runtime/amd64.S}}
-\begin{frame}{Introducing \funcname{caml\_raise\_exn}}
-  \begin{columns}[c]
+\begin{frame}{Backtraces}{But before that, we need more fields from \typename{caml\_domain\_state}}
+  \begin{columns}
     \begin{column}{0.5\textwidth}
       \begin{itemize}
-        \item<1-> First checks if exception backtrace should be recorded
+        \item Remember \typename{caml\_domain\_state} the per-domain runtime state?
+        \item Some other members are of interest to us now\dots
+        \item \localname{backtrace\_active} is used to know if the runtime should collect backtraces
+        \item \localname{backtrace\_active} can be set by
           \begin{itemize}
-            \item \funcname{OCAMLRUNPARAM}=b environment variable
+            \item The \funcarg{b} flag in the \funcname{OCAMLRUNPARAM} environment variable
             \item \mintinline{ocaml}{Printexc.record_backtrace : bool -> unit} \footnotemark
           \end{itemize}
-        \item<2-> If not, standard trap behaviour
+      \end{itemize}
+    \end{column}
+    \begin{column}{0.5\textwidth}
+      \begin{listing}
+        \mintc[highlightlines={9-11}]{src/ocaml/domain\_state\_backtrace.h}
+        \caption{runtime/caml/domain\_state.h}
+      \end{listing}
+    \end{column}
+  \end{columns}
+  \footnotetext[1]{https://v2.ocaml.org/api/Printexc.html}
+\end{frame}
+
+\newcommand\listCamlRaiseExn[1][]{
+  \listasm[firstline=702,lastline=725,#1]{../ocaml/runtime/amd64.S}{runtime/amd64.S:702}}
+
+\begin{frame}{Backtraces}{Walk through \funcname{caml\_raise\_exn}}
+  \begin{columns}[T]
+    \begin{column}{0.5\textwidth}
+      \begin{itemize}
+        \item<1-> First checks whether exceptions backtrace should be recorded
+        \item<1-> By checking the \funcarg{domain\_state->backtrace\_active} value
+        \item<2-> If not, acts as \funcname{raise\_notrace} with \funcname{RESTORE\_EXN\_HANDLER\_OCAML}
           \begin{itemize}
-            \item Sets \regname{RSP} to \localname{domain\_state->exn\_handler} value
-            \item Restores \localname{domain\_state->exn\_handler} from trap
-            \item Jumps with \funcname{ret} (same effect as using \funcname{pop} and \funcname{jmp})
+            \item Set \regname{RSP} to \localname{domain\_state->exn\_handler} value
+            \item Restore \localname{domain\_state->exn\_handler} from trap
+            \item Jump with \funcname{ret} (same effect as using \funcname{pop} and \funcname{jmp})
           \end{itemize}
-        \item<3-> Switches stack to execute C code
-        \item<4-> Calls \funcname{caml\_stash\_backtrace}, a C function of the runtime, with
-          \begin{itemize}
-            \item \funcarg{exn}: exception value
-            \item \funcarg{pc}: code address of raising point
-            \item \funcarg{sp}: lower stack address of raising function
-            \item \funcarg{trapsp}: stack address of next handler
-          \end{itemize}
+        \item<3-> Otherwise, switches to the C stack to be able to execute C code
+        \item<4-> Calls \funcname{caml\_stash\_backtrace}, a C function provided by the runtime\ignorespaces
+          \onslide<6->{, with
+            \begin{itemize}
+              \item \funcarg{exn}: exception value
+              \item \funcarg{pc}: code address of the raising point
+              \item \funcarg{sp}: stack address of the raising function
+              \item \funcarg{trapsp}: stack address of the next handler
+            \end{itemize}
+          }
       \end{itemize}
       \bigskip
       \mintocaml[firstline=9,lastline=13,highlightlines=12]{../src/backtrace/backtrace.ml}
     \end{column}
     \begin{column}{0.5\textwidth}
+      \raggedleft
       \onslide*<1,3-4>{
         \mintc[firstline=190,lastline=192]{../ocaml/runtime/amd64.S}
         \mintc[firstline=234,lastline=237]{../ocaml/runtime/amd64.S}
@@ -123,105 +134,357 @@
         \mintc[firstline=190,lastline=192,highlightlines={191-192}]{../ocaml/runtime/amd64.S}
         \mintc[firstline=234,lastline=237,highlightlines={235-237}]{../ocaml/runtime/amd64.S}
       }
-      \onslide*<1>{\listAmdSixtyFour[highlightlines=705]{}}
-      \onslide*<2>{\listAmdSixtyFour[highlightlines={707-708}]{}}
-      \onslide*<3>{\listAmdSixtyFour[highlightlines={712-714}]{}}
-      \onslide*<4>{\listAmdSixtyFour[highlightlines={715-720}]{}}
-      \onslide*<5>{\providecommand\step{2}\input{diagrams/backtrace/backtrace.tex}}
+      \onslide*<1>{\listCamlRaiseExn[highlightlines=705]{}}
+      \onslide*<2>{\listCamlRaiseExn[highlightlines={707-708}]{}}
+      \onslide*<3>{\listCamlRaiseExn[highlightlines={712-714}]{}}
+      \onslide*<4>{\listCamlRaiseExn[highlightlines={715-720}]{}}
+      \onslide*<5>{\providecommand\step{1}\input{diagrams/backtrace/backtrace.tex}}
+      \onslide*<6>{\providecommand\step{2}\input{diagrams/backtrace/backtrace.tex}}
     \end{column}
   \end{columns}
-  \footnotetext[1]{https://v2.ocaml.org/api/Printexc.html}
 \end{frame}
-
 
 \newcommand\listStashBacktrace[1][]{
   \listc[firstline=91,lastline=120,#1]{../ocaml/runtime/backtrace\_nat.c}{runtime/backtrace\_nat.c:91}}
-\begin{frame}{Introducing \funcname{caml\_stash\_backtrace}}
+
+\begin{frame}{Backtraces}{Introducing \funcname{caml\_stash\_backtrace}}
+  \begin{columns}[c]
+    \begin{column}{0.5\textwidth}
+      \minipage[c][0.66\textheight][s]{\columnwidth}
+      \begin{itemize}
+        \item<1-> A C function provided by the runtime (specific to native code)
+        \item<2-> It scans the stack, between the stack pointer at the raising point up to the next trap, in order to collect the names of the detected function frames
+          \onslide*<2>{
+            \begin{itemize}
+              \item And more information, like line number, column number...
+            \end{itemize}
+          }
+        \item<3-> It uses the same technique and information as the Garbage Collector (GC) uses to scan the values live on the stack
+          \onslide*<4>{
+            \begin{itemize}
+              \item \typename{frame\_descr} are at the core of stack unwinding
+            \end{itemize}
+          }
+      \end{itemize}
+      \vfill
+      \mintocaml[firstline=9,lastline=13,highlightlines=12]{../src/backtrace/backtrace.ml}
+      \endminipage
+    \end{column}
+    \begin{column}{0.5\textwidth}
+      \onslide*<1>{\listStashBacktrace[highlightlines=91]{}}
+      \onslide*<2>{\listStashBacktrace[highlightlines={91,117-118}]{}}
+      \onslide*<3->{\listStashBacktrace[highlightlines={94,106,109-110}]{}}
+    \end{column}
+  \end{columns}
+\end{frame}
+
+\newcommand\listFrameDescr[1][]{
+  \listocaml[firstline=111,lastline=124,#1]{../ocaml/asmcomp/emitaux.ml}{asmcomp/emitaux.ml:111}}
+\newcommand\listDebugInfo[1][]{
+  \listocaml[firstline=38,lastline=49,#1]{../ocaml/lambda/debuginfo.mli}{lambda/debuginfo.mli:38}}
+
+\begin{frame}{Backtraces}{\typename{frame\_descr} and \typename{frame\_debuginfo} in a nutshell}
   \begin{columns}[c]
     \begin{column}{0.5\textwidth}
       \begin{itemize}
-        \item<1-> A C function provided by the runtime (native code specific)
-        \item<1-> Purpose: scans the stack between two addresses in order to collect informations on discovered function frames
-        \item<3-> Uses the same technique and informations that the GC use to scan the roots on the stack
-        \item<3-> \typename{frame\_descr} holds lot of informations, only need the frame size here
-        \item<4-> Store a pointer \typename{frame\_descr} to each discovered in \localname{domain\_state->backtrace\_buffer}
+        \item<1-> For every return address in an OCaml program, there is a associated \typename{frame\_descr}
+        \item<2-> A \typename{frame\_descr} specifies
+        \begin{itemize}
+          \item<2-> The size of the function stack frame
+          \item<3-> Where live values are on the stack (so that the GC can mark them as live and prevent from being swept)
+        \end{itemize}
+        \item<4-> When compiled with debug information, \typename{frame\_descr} will be linked to a \typename{frame\_debuginfo}
+        \begin{itemize}
+          \item<5-> Contains information about the position in the source code (file name, line and column number)
+        \end{itemize}
       \end{itemize}
-      \onslide*<2>{
-        \smallskip
-        \listc[firstline=85,lastline=90]{../ocaml/runtime/backtrace\_nat.c}{runtime/backtrace\_nat.c:85}
-      }
-      \onslide*<3>{
-        \smallskip
-        \listocaml[firstline=111,lastline=124]{../ocaml/asmcomp/emitaux.ml}{asmcomp/emitaux.ml:111}
-      }
-      \onslide*<1-2,4->{
-        \bigskip
-        \mintocaml[firstline=9,lastline=13,highlightlines=12]{../src/backtrace/backtrace.ml}
-      }
     \end{column}
     \begin{column}{0.5\textwidth}
-      \onslide*<1-2>{\listStashBacktrace{}}
-      \onslide*<3>{\listStashBacktrace[highlightlines={94,106,109-110}]{}}
-      \onslide*<4>{\providecommand\step{2}\input{diagrams/backtrace/backtrace.tex}}
-      \onslide*<5>{\providecommand\step{3}\input{diagrams/backtrace/backtrace.tex}}
-      \onslide*<6>{\providecommand\step{4}\input{diagrams/backtrace/backtrace.tex}}
+        \onslide*<1>{\listFrameDescr[highlightlines={118-122}]{}}
+        \onslide*<2>{\listFrameDescr[highlightlines={120}]{}}
+        \onslide*<3>{\listFrameDescr[highlightlines={121}]{}}
+        \onslide*<4->{\listFrameDescr[highlightlines={122}]{}}
+        \medskip
+        \onslide*<1-3>{\listDebugInfo{}}
+        \onslide*<4>{\listDebugInfo[highlightlines={38,49}]{}}
+        \onslide*<5>{\listDebugInfo[highlightlines={39-46}]{}}
     \end{column}
   \end{columns}
 \end{frame}
 
-\begin{frame}{Control returns to \funcname{caml\_raise\_exn}}
+% Duplicate of previous-previous slide
+\begin{frame}{Backtraces}{Continuing on \funcname{caml\_stash\_backtrace}}
   \begin{columns}[c]
     \begin{column}{0.5\textwidth}
-      \onslide*<1>{
+      \minipage[c][0.75\textheight][s]{\columnwidth}
+      \begin{itemize}
+          \color{gray}
+        \item A C function provided by the runtime (specific to native code)
+        \item It scans the stack, between the stack pointer at the raising point up to the next trap, in order to collect the names of the detected function frames
+        \item It uses the same technique and information as the Garbage Collector (GC) uses to scan the values live on the stack
+      \end{itemize}
+      \begin{itemize}
+        \item For each function frame detected, store a pointer to the \typename{frame\_descr} in the \localname{domain\_state->backtrace\_buffer} array, effectively constructing the backtrace
+      \end{itemize}
+      \onslide<2->{
         \begin{itemize}
-          \item \funcname{caml\_stash\_backtrace} completed
-          \item Pops the trap and jump to \typename{ExnA} handler's code
+            \smallskip
+          \item Constructed backtrace:
+            \funcname{definitely\_raise},
+            \onslide<3->{\funcname{probably\_raise}}
         \end{itemize}
       }
-      \onslide*<2>{\listAmdSixtyFour[highlightlines={722-723}]}
-      \bigskip
+      \vfill
       \mintocaml[firstline=9,lastline=13,highlightlines=12]{../src/backtrace/backtrace.ml}
+      \endminipage
     \end{column}
     \begin{column}{0.5\textwidth}
-      \providecommand\step{5}\input{diagrams/backtrace/backtrace.tex}
+      \raggedleft
+      \onslide*<1>{\listStashBacktrace[highlightlines={114-115}]{}}
+      \onslide*<2>{\providecommand\step{3}\input{diagrams/backtrace/backtrace.tex}}
+      \onslide*<3>{\providecommand\step{4}\input{diagrams/backtrace/backtrace.tex}}
     \end{column}
   \end{columns}
 \end{frame}
 
-\begin{frame}{\typename{ExnA} handler doesn't match}
+\begin{frame}{Backtraces}{Back to \funcname{caml\_raise\_exn}}
   \begin{columns}[c]
     \begin{column}{0.5\textwidth}
-      \onslide*<1,3>{
+      \minipage[c][0.66\textheight][s]{\columnwidth}
+      \begin{itemize}\color{gray}
+        \item Checks wheteher exceptions backtrace should be recorded, by checking the \funcarg{domain\_state->backtrace\_active} value
+        \item Switches to the C stack to be able to execute C code
+        \item Calls \funcname{caml\_stash\_backtrace}, to collect the backtrace up to the next trap
+      \end{itemize}
+      \onslide*<2->{
         \begin{itemize}
-          \item<1-> Fancy match\_with
-          \item<1-> No match
-          \item<3-> Reraise
+          \item<2-> Executes the exception handler in \funcname{probably\_raise} with \funcname{RESTORE\_EXN\_HANDLER\_OCAML}
+            \begin{itemize}
+              \item Set \regname{RSP} to \localname{domain\_state->exn\_handler} value
+              \item Restore \localname{domain\_state->exn\_handler} from trap
+              \item Jump to the handler code with \funcname{ret}
+            \end{itemize}
         \end{itemize}
       }
-      \onslide*<2>{\mintcmm[highlightlines={10-18}]{../src/backtrace/camlBacktrace\_\_probably\_raise\_351.cmm}}
-      \medskip
-      \onslide*<1->{\mintocaml[firstline=15,lastline=21,highlightlines={18-21}]{../src/backtrace/backtrace.ml}}
+      \vfill
+      \onslide*<1>{\mintocaml[firstline=9,lastline=13,highlightlines=12]{../src/backtrace/backtrace.ml}}
+      \onslide*<2->{\mintocaml[firstline=15,lastline=21,highlightlines={19-21}]{../src/backtrace/backtrace.ml}}
+      \endminipage
     \end{column}
     \begin{column}{0.5\textwidth}
-      \onslide*<1>{\providecommand\step{5}\input{diagrams/backtrace/backtrace.tex}}
-      \onslide*<2->{\providecommand\step{6}\input{diagrams/backtrace/backtrace.tex}}
+      \centering
+      \onslide*<1>{
+        \mintc[firstline=190,lastline=192]{../ocaml/runtime/amd64.S}
+        \mintc[firstline=234,lastline=237]{../ocaml/runtime/amd64.S}
+      }
+      \onslide*<2>{
+        \mintc[firstline=190,lastline=192,highlightlines={191-192}]{../ocaml/runtime/amd64.S}
+        \mintc[firstline=234,lastline=237,highlightlines={235-237}]{../ocaml/runtime/amd64.S}
+      }
+      \onslide*<1>{\listCamlRaiseExn[highlightlines=720]{}}
+      \onslide*<2>{\listCamlRaiseExn[highlightlines=722]{}}
+      \onslide*<3->{\providecommand\step{5}\input{diagrams/backtrace/backtrace.tex}}
+    \end{column}
+  \end{columns}
+\end{frame}
+
+\begin{frame}{Backtraces}{\funcname{caml\_probably\_raise}'s handler doesn't catch \typename{ExnC}}
+  \begin{columns}[c]
+    \begin{column}{0.45\textwidth}
+      \minipage[c][0.75\textheight][s]{\columnwidth}
+      \begin{itemize}
+        \item<1-> \funcname{match \dots with}\footnotemark pattern matching can also match exceptions
+        \item<1-> The CMM of \funcname{probably\_raise} shows that this \funcname{match \dots with} is implemented with a pattern matching and a \funcname{try \dots with}
+        \item<1-> But this one only matches on \typename{ExnA} exception
+        \item<2-> Since the pattern matching fails to catch the exception, \funcname{reraise} is called with our current \typename{ExnC} exception
+        \item<3-> Disassembly shows that \funcname{reraise} is actually a call to \funcname{caml\_reraise\_exn}, which is also an assembly function provided by the runtime
+      \end{itemize}
+      \vfill
+      \mintocaml[firstline=15,lastline=21,highlightlines={18-21}]{../src/backtrace/backtrace.ml}
+      \endminipage
+    \end{column}
+    \begin{column}{0.55\textwidth}
+      \centering
+      \onslide*<1>{\mintcmm[highlightlines={10-18}]{../src/backtrace/camlBacktrace\_\_probably\_raise\_351.cmm}}
+      \onslide*<2>{\listcmm[highlightlines=18]{../src/backtrace/camlBacktrace\_\_probably\_raise_351.cmm}{CMM of probably\_raise}}
+      \onslide*<3>{\mintobjdump[firstline=5,lastline=35,highlightlines=31]{../src/backtrace/camlBacktrace\_\_probably\_raise_351.objdump}}
+    \end{column}
+  \end{columns}
+  \only<1>{\footnotetext[1]{https://blog.janestreet.com/pattern-matching-and-exception-handling-unite/}}
+\end{frame}
+
+\newcommand\listCamlReraiseExn[1][]{
+  \listasm[firstline=727,lastline=734,#1]{../ocaml/runtime/amd64.S}{runtime/amd64.S:727}}
+
+\begin{frame}{Backtraces}{Introducing \funcname{caml\_reraise\_exn}}
+  \begin{columns}[c]
+    \begin{column}{0.5\textwidth}
+      \minipage[c][0.66\textheight][s]{\columnwidth}
+      \begin{itemize}
+        \item<1-> The exception have to be reraised to the next handler
+        \item<2-> First, checks if the backtrace should be collected with \funcarg{domain\_state->backtrace\_active}
+        \only<3>{
+        \begin{itemize}
+            \item If not, behaves like a \funcname{raise\_notrace} with \funcname{RESTORE\_EXN\_HANDLER\_OCAML}
+        \end{itemize}
+        }
+        \item<4-> Jumps into \funcname{caml\_raise\_exn}
+        \item<5-> Calls \funcname{caml\_stash\_backtrace} again, to scan the next part of the stack: from the trap just pop-ed to the next trap
+      \end{itemize}
+      \vfill
+      \mintocaml[firstline=15,lastline=21,highlightlines={18-21}]{../src/backtrace/backtrace.ml}
+      \endminipage
+    \end{column}
+    \begin{column}{0.5\textwidth}
+      \raggedleft
+      \onslide*<1>{\listCamlReraiseExn{}}
+      \onslide*<2>{\listCamlReraiseExn[highlightlines=729]{}}
+      \onslide*<3>{
+        \mintc[firstline=190,lastline=192,highlightlines={191-192}]{../ocaml/runtime/amd64.S}
+        \mintc[firstline=234,lastline=237,highlightlines={235-237}]{../ocaml/runtime/amd64.S}
+        \medskip
+        \listCamlReraiseExn[highlightlines=731]{}
+      }
+      \onslide*<4-5>{
+        % TODO refactor with \listCamlReraiseExn
+        \mintasm[firstline=727,lastline=734,highlightlines=730]{../ocaml/runtime/amd64.S}
+        \medskip
+      }
+      \onslide*<4>{\listCamlRaiseExn[highlightlines=711]{}}
+      \onslide*<5>{\listCamlRaiseExn[highlightlines=720]{}}
+    \end{column}
+  \end{columns}
+\end{frame}
+
+\begin{frame}{Backtraces}{Backtrace collection continues}
+  \begin{columns}[c]
+    \begin{column}{0.55\textwidth}
+      \minipage[c][0.75\textheight][s]{\columnwidth}
+      \begin{itemize}
+        \item<1-> \funcname{caml\_stash\_backtrace} scans the older part of the stack, up to the next trap
+        \item<6-> Controls jumps to the nested exception handler in \funcname{maybe\_raise}, which matches only on \typename{ExnB}
+        \item<7-> \funcname{caml\_reraise\_exn} is called again, backtrace collection resumes with \funcname{caml\_stash\_backtrace}
+      \end{itemize}
+      \medskip
+      \begin{itemize}
+        \item<2-> Constructed backtrace:
+        \begin{itemize}
+          \item <2-> \funcname{definitely\_raise}
+          \item <2-> \funcname{probably\_raise}
+          \item <3-> \funcname{probably\_raise} (re-raise)
+          \item <4-> \funcname{maybe\_raise}
+          \item <5-> \funcname{main}
+          \item <8-> \funcname{main} (re-raise)
+        \end{itemize}
+      \end{itemize}
+      \vfill
+      \onslide*<1-5>{\mintocaml[firstline=15,lastline=21]{../src/backtrace/backtrace.ml}}
+      \onslide*<6>{\mintocaml[firstline=28,lastline=34,highlightlines=31]{../src/backtrace/backtrace.ml}}
+      \onslide*<7->{\mintocaml[firstline=28,lastline=34,highlightlines=33]{../src/backtrace/backtrace.ml}}
+      \endminipage
+    \end{column}
+    \begin{column}{0.45\textwidth}
+      \raggedleft
+      \onslide*<1>{\providecommand\step{6}\input{diagrams/backtrace/backtrace.tex}}
+      \onslide*<2>{\providecommand\step{6}\input{diagrams/backtrace/backtrace.tex}}
+      \onslide*<3>{\providecommand\step{7}\input{diagrams/backtrace/backtrace.tex}}
+      \onslide*<4>{\providecommand\step{8}\input{diagrams/backtrace/backtrace.tex}}
+      \onslide*<5>{\providecommand\step{9}\input{diagrams/backtrace/backtrace.tex}}
+      \onslide*<6>{\providecommand\step{10}\input{diagrams/backtrace/backtrace.tex}}
+      \onslide*<7>{\providecommand\step{11}\input{diagrams/backtrace/backtrace.tex}}
+      \onslide*<8>{\providecommand\step{12}\input{diagrams/backtrace/backtrace.tex}}
+      \onslide*<9>{\providecommand\step{13}\input{diagrams/backtrace/backtrace.tex}}
+    \end{column}
+  \end{columns}
+\end{frame}
+
+\begin{frame}{Backtraces}{Printing the backtrace}
+  \begin{columns}[c]
+    \begin{column}{0.45\textwidth}
+      \minipage[c][0.66\textheight][s]{\columnwidth}
+      \begin{itemize}
+        \item<1-> The exception backtrace can now be printed to \funcarg{stdout} with \funcname{Printexc.print_backtrace}
+        \item<2-> First the exception backtrace is retrieved into an OCaml array with \funcname{get_raw_backtrace }
+        \item<3-> Which is implemented as the \funcname{caml_get_exception_raw_backtrace} C function in the runtime
+        \item<4-> And finally printed with \funcname{print_exception_backtrace}
+      \end{itemize}
+      \vfill
+      \mintocaml[firstline=28,lastline=34,highlightlines=33]{../src/backtrace/backtrace.ml}
+      \endminipage
+    \end{column}
+    \begin{column}{0.55\textwidth}
+      \onslide*<1,2>{
+        \mintocaml[firstline=100,lastline=101]{../ocaml/stdlib/printexc.ml}
+      }
+      \only<1>{
+        \listocaml[firstline=170,lastline=172]{../ocaml/stdlib/printexc.ml}{stdlib/printexc.ml:170}
+      }
+      \only<2>{
+        \listocaml[firstline=170,lastline=172,highlightlines=172]{../ocaml/stdlib/printexc.ml}{stdlib/printexc.ml:170}
+      }
+      \only<3>{
+        \mintc[firstline=154,lastline=156]{../ocaml/runtime/backtrace.c}
+        \listc[firstline=171,lastline=192,highlightlines={184-187}]{../ocaml/runtime/backtrace.c}{runtime/backtrace.c:154}
+      }
+      \only<4>{
+        \listocaml[firstline=155,lastline=165]{../ocaml/stdlib/printexc.ml}{stdlib/printexc.ml:55}
+      }
     \end{column}
   \end{columns}
 \end{frame}
 
 
-%\onslide*<2>{\providecommand\step{2}\input{diagrams/backtrace/backtrace.tex}}
-%\onslide*<3>{\providecommand\step{3}\input{diagrams/backtrace/backtrace.tex}}
-%\onslide*<4>{\providecommand\step{4}\input{diagrams/backtrace/backtrace.tex}}
-%\onslide*<5>{\providecommand\step{5}\input{diagrams/backtrace/backtrace.tex}}
-%\onslide*<6>{\providecommand\step{6}\input{diagrams/backtrace/backtrace.tex}}
-%\onslide*<7>{\providecommand\step{7}\input{diagrams/backtrace/backtrace.tex}}
-%\onslide*<8>{\providecommand\step{8}\input{diagrams/backtrace/backtrace.tex}}
-%\onslide*<9>{\providecommand\step{9}\input{diagrams/backtrace/backtrace.tex}}
-%\onslide*<10>{\providecommand\step{10}\input{diagrams/backtrace/backtrace.tex}}
-%\onslide*<11>{\providecommand\step{11}\input{diagrams/backtrace/backtrace.tex}}
-%\onslide*<12>{\providecommand\step{12}\input{diagrams/backtrace/backtrace.tex}}
-%\onslide*<13>{\providecommand\step{13}\input{diagrams/backtrace/backtrace.tex}}
+\subsection{The multiple kinds of raise}
+
+\begin{frame}{Backtraces}{When backtraces are not needed}
+  \begin{columns}[c]
+    \begin{column}{0.45\textwidth}
+      \minipage[c][0.66\textheight][s]{\columnwidth}
+      \begin{itemize}
+        \item<1-> What if the backtrace for an exception is never needed?
+        \item<2-> It's possible to raise the exception explicitly with \funcname{raise\_notrace} to make raising as cheap as possible
+        \item<3-> An example of use in the \funcname{dynlink} library of the OCaml compiler
+      \end{itemize}
+      \vfill
+      \onslide<3->{
+      \listocaml[firstline=205,lastline=209,highlightlines=207]{../ocaml/otherlibs/dynlink/dynlink\_compilerlibs/misc.ml}{otherlibs/dynlink/dynlink\_compilerlibs/misc.ml:205}
+      }
+      \endminipage
+    \end{column}
+    \begin{column}{0.55\textwidth}
+    \only<4>{
+      \mintcmm[highlightlines=3]{../src/notrace/camlNotrace\_\_fun_347.cmm}
+      \listcmm{../src/notrace/camlNotrace\_\_all\_somes\_327.cmm}{all\_somes}
+    }
+    \onslide*<5->{
+      \listobjdump[highlightlines={6-9}]{../src/notrace/camlNotrace\_\_fun_347.objdump}{anonymous function from \funcname{all\_somes}}
+    }
+    \end{column}
+  \end{columns}
+\end{frame}
+
+\begin{frame}{Backtraces}{Summary table of the multiple kinds of raise}
+  \begin{itemize}
+    \item When debugging information is enabled and if the backtrace of an exception isn't needed, it's possible to raise with \funcname{raise\_notrace} for performance
+    \item When debugging information is \emph{not} enabled, the compiler optimises \funcname{raise} calls to inline assembly (same effect as using \funcname{raise\_notrace})
+  \end{itemize}
+  \bigskip
+  \centering
+  \begin{tabular}{| l | c | c | c | c |}
+    \hline
+    \parbox{10em}{Debug information \\ (\funcarg{-g} flag)}  & \multicolumn{2}{|c|}{Disabled}                                     & \multicolumn{2}{|c|}{Enabled} \\
+    \hline
+    Raise kind                                               & \funcname{raise} & \funcname{raise\_notrace}                       & \funcname{raise} & \funcname{raise\_notrace} \\
+    \hline
+    Compilation                                              & \parbox{8em}{inline assembly\\ (optimization)} & inline assembly   & \funcname{caml\_raise\_exn} & inline assembly \\
+    \hline
+  \end{tabular}
+\end{frame}
 
 
-\subsection{raise\_notrace}
+%
+% Takeaway #5
+%
+\subsection*{Takeaway \#5}
+\frameSubsectionTakeaway{}
+\againframe<5>{takeaway}
