Remove takeway #5 from 'Nested' section

--- a/presentation/nested.tex
+++ b/presentation/nested.tex
@@ -291,8 +291,8 @@
 
 
 %
-% Takeaway #4 and #5
+% Takeaway #4
 %
-\subsection*{Takeaway \#4 and \#5}
+\subsection*{Takeaway \#4}
 \frameSubsectionTakeaway{}
-\againframe<4-5>{takeaway}
+\againframe<4>{takeaway}
