--- a/presentation/presentation.tex
+++ b/presentation/presentation.tex
@@ -26,6 +26,7 @@ text margin right=5pt
 \usetikzlibrary{matrix}
 \usetikzlibrary{positioning}
 \usetikzlibrary{shapes.geometric}
+\usetikzlibrary{fit}
 
 
 \usemintedstyle{pastie}
