--- a/presentation/default.tex
+++ b/presentation/default.tex
@@ -9,7 +9,7 @@
 \begin{columns}
 \begin{column}{0.5\textwidth}
 \begin{itemize}
-\item \localname{domain\_state->exn\_hanlder} points to a trap located before \funcname{entry}!
+\item \localname{domain\_state->exn\_handler} points to a trap located before \funcname{entry}!
 \item What installed this very first trap there?
 \end{itemize}
 \bigskip
