Add missing subsection frame for 'The multiple kinds of raise'

--- a/presentation/backtrace.tex
+++ b/presentation/backtrace.tex
@@ -461,6 +461,7 @@
 
 
 \subsection{The multiple kinds of raise}
+\frameSubsection{}{}
 
 \begin{frame}{Backtraces}{When backtraces are not needed}
   \begin{columns}[c]
